# advent-of-code

./: CMakeLists.txt  main.cpp  pyproject.toml  tester.py
.ipynb_checkpoints/: Advent of code-checkpoint.ipynb
2019/: Advent of code.ipynb  day6.txt  day8.txt
2020/: AOC.ipynb  day 14.ipynb  day 15.ipynb  day13.ipynb
2020/.ipynb_checkpoints/: AOC-checkpoint.ipynb  day13-checkpoint.ipynb
2022/: 10.py  11.py  13.py  15-merge-intervals.py  16.py  17.py  18-trapped-cubes.py  19.py  2.py  21-operations-tree.py  22-cube-map.py  22.py  23.py  24.py  25.py  3.py  5.py  6.py  7.py  8.py  9.py  utils.py
2023/: 04-winning-cards.cpp  06.cpp  07 copy.cpp  07.cpp  08.cpp  09.cpp  10.cpp  2-colorcubesgame.cpp  3  3.cpp  5  5.cpp  7  8  8.cpp  9  9.cpp  input  utils.py
2023/cppUtils/: dijkstra.cpp  node.h
2024/: day01.py  day02.py  day04.py  day10.py  day11.py  day12.py  utils.py
advent/2022/: 01.py  03.py  04.py  05-piles.py  08-grid.py  10-cpu-instructions.py  12-disjktra.py  14-falling-rocks.py  16-valves-dijkstra.py  17-tetris.py  20-array-jumping.py  input19  trans22.py
advent/2023/: 01-firstnlastdigits.py  03-gears-neighbors.cpp  10  10 copy.cpp  10.cpp  13.cpp  4  5  6  problem_example.cpp
advent/2024/: day03.py  day05.py  day06.py  day07.py  day08.py  day09.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  utils.py
advent/2025/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py
advent/utils/: utils.py
old/: Advent of code.ipynb  day2p1.txt  day3.txt
(+11 files in other folders)
