[project]
name = "advent"
version = "0.1.0"
description = ""
authors = [
    {name = "Fabrice Charbonneau",email = "fabrice.charbonneau@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy (>=1.8.17,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
